--- a/package.json
+++ b/package.json
@@ -11,16 +11,24 @@
     "test": "npm run lint && npm run unit-test",
     "postinstall": "npm run build"
   },
-  "author": "",
+  "author": "Lee Gordon",
   "license": "ISC",
   "dependencies": {
     "boom": "7.3.0",
+    "catbox-redis": "^4.2.4",
     "govuk-frontend": "2.8.0",
     "hapi": "18.1.0",
+    "hoek": "^6.1.3",
     "inert": "5.1.2",
     "joi": "14.3.1",
+    "node": "^12.1.0",
+    "nodemon": "^1.18.11",
     "nunjucks": "3.2.0",
-    "vision": "5.4.4"
+    "session-cache": "^0.2.0",
+    "sinon": "^7.3.2",
+    "vision": "5.4.4",
+    "wreck": "^14.2.0",
+    "yar": "^9.1.0"
   },
   "devDependencies": {
     "blipp": "^3.1.2",
@@ -31,7 +39,7 @@
     "good-file": "6.0.1",
     "good-squeeze": "5.1.0",
     "lab": "18.0.2",
-    "node-sass": "4.11.0",
+    "node-sass": "^4.12.0",
     "standard": "12.0.1"
   }
 }
